# minute-bot

./: .gitignore  CLAUDE.md  Dockerfile  README.md  client.py  dataset-downloader.py  docker-compose.yml  pyproject.toml  requirements-client.txt
.venv-client/: pyvenv.cfg
src/minute_bot/: __init__.py  config.py  services.py
src/minute_bot/agents/: __init__.py  graph_generation.py  transcript_cleanup.py
src/minute_bot/api/: __init__.py  agent.py  diarization.py  events.py  health.py  meetings.py  profiles.py  streaming.py  transcript_processing.py  transcription.py
src/minute_bot/audio/: __init__.py  analysis.py  encoding.py  processing.py
src/minute_bot/core/: __init__.py  audio_buffer.py  audio_capture.py  diarizer.py  graph_processing.py  speaker_attribution.py  transcriber.py
src/minute_bot/db/: __init__.py  audio_files.py  client.py  entities.py  entity_mentions.py  events.py  meetings.py  processed_transcripts.py  relationships.py  speaker_profiles.py  speakers.py  transcripts.py  triplet_links.py  triplet_storage.py  triplets.py
src/minute_bot/llm/: __init__.py  client.py  transcript_processor.py
src/minute_bot/memory_graph/: __init__.py  extraction.py  processing.py
src/minute_bot/models/: __init__.py  audio.py  entities.py  events.py  records.py  session.py  speaker.py  (+1 more)
supabase/migrations/: 001_initial_schema.sql  002_speaker_profiles.sql  003_graph_processing_status.sql  003_vector_512.sql  004_speaker_attribution_status.sql  005_speakers_profile_fk.sql  006_processed_transcripts.sql  007_triplet_schema.sql
tests/: __init__.py
(+5 files in other folders)
